--- a/package.json
+++ b/package.json
@@ -74,5 +74,9 @@
     "@vitejs/plugin-react": "4.7.0",
     "tailwindcss": "4.1.12",
     "vite": "6.3.5"
-  }
+  },
+  "engines": {
+  "node": "20.x"
+} 
 }
+
